apps/cli/src/snapshots/costroid__render__tests__snapshot_alerts_command_plain.snap
---
source: apps/cli/src/render.rs
expression: "render_alerts(&alerts_fixture(), RenderOptions::plain())"
---
costroid alerts
  claude code 5-hour limit at 97%, resets in 41m (critical)
  codex budget over by ~$10.00, spent ~$60.00 of ~$50.00 (over budget)
  claude code weekly limit at 82%, resets in 2d 4h (near limit)
