apps/cli/src/snapshots/costroid__render__tests__snapshot_anomalies_clean_plain.snap
---
source: apps/cli/src/render.rs
expression: "render_anomalies(&anomalies_view_clean_fixture(), RenderOptions::plain())"
---
costroid anomalies
scope: API-lane spend spike + all-lane model mix vs your own recent history (estimated)
no anomalies - usage in line with your 10-day norm (estimated)
quota burn-rate anomalies need multi-day quota history, which local data does not keep - not shown.
figures are local estimates (your tokens x current prices), vs your own recent history.
